--- a/crowdFunding.Core/crowdFunding.Core.csproj
+++ b/crowdFunding.Core/crowdFunding.Core.csproj
@@ -5,7 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Migrations\" />
+    <Compile Remove="Migrations\20200529223747_add_photos_etc2.cs" />
+    <Compile Remove="Migrations\20200529223747_add_photos_etc2.Designer.cs" />
+    <Compile Remove="Migrations\20200529224013_add_photos_etc3.cs" />
+    <Compile Remove="Migrations\20200529224013_add_photos_etc3.Designer.cs" />
+    <Compile Remove="Migrations\20200529225028_ddddd.cs" />
+    <Compile Remove="Migrations\20200529225028_ddddd.Designer.cs" />
+    <Compile Remove="Migrations\20200529230607_add_videos.cs" />
+    <Compile Remove="Migrations\20200529230607_add_videos.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
