--- a/crowdFunding.Web/crowdFunding.Web.csproj
+++ b/crowdFunding.Web/crowdFunding.Web.csproj
@@ -21,4 +21,10 @@
     <ProjectReference Include="..\crowdFunding.Core\crowdFunding.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="wwwroot\images\outsideofthebox.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
